<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name</string>
    <string name="name_hint">e.g. John</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="_0_9">0/9</string>
    <string name="finish">FINISH</string>
    <string name="submit">SUBMIT</string>
    <string name="go_to_next_question">GO TO NEXT QUESTION</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
</resources>